[package]
name = "cargo-kelvin"
version = "0.1.0"
edition = "2021"

description = "Cargo subcommand for submitting code into the Kelvin evaluator."
authors = ["Jakub Beránek <jakub.beranek@vsb.cz>"]
license-file = "LICENSE.md"

[dependencies]
anyhow = "1"
cargo_metadata = "0.18"
clap = { version = "4.5", features = ["derive", "env"] }
ignore = "0.4"
log = "0.4"
open = "5.3"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["blocking", "json", "multipart", "rustls-tls-webpki-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
